--- a/css/style.css
+++ b/css/style.css
@@ -23,12 +23,12 @@ body {
       font-size: 20px; } }
 
 a {
-  color: #2c98f0;
+  color:#999999;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s; }
   a:hover, a:active, a:focus {
-    color: #2c98f0;
+    color: #999999;
     outline: none;
     text-decoration: none !important; }
 
@@ -58,15 +58,15 @@ figure {
 
 ::-webkit-selection {
   color: #fff;
-  background: #2c98f0; }
+  background: #999999; }
 
 ::-moz-selection {
   color: #fff;
-  background: #2c98f0; }
+  background:#999999; }
 
 ::selection {
   color: #fff;
-  background: #2c98f0; }
+  background: #999999; }
 
 #colorlib-page {
   width: 100%;
@@ -156,7 +156,7 @@ figure {
             bottom: 7px;
             left: 0;
             right: 0;
-            background-color: #2c98f0;
+            background-color:#999999;
             visibility: hidden;
             -webkit-transform: scaleX(0);
             -moz-transform: scaleX(0);
@@ -179,7 +179,7 @@ figure {
               -o-transform: scaleX(1);
               transform: scaleX(1); }
         #colorlib-aside #colorlib-main-menu ul li.active a {
-          color: #2c98f0; }
+          color: #999999; }
           #colorlib-aside #colorlib-main-menu ul li.active a:after {
             visibility: visible;
             -webkit-transform: scaleX(1);
@@ -214,7 +214,7 @@ figure {
           #colorlib-aside .colorlib-footer ul li a:hover, #colorlib-aside .colorlib-footer ul li a:active, #colorlib-aside .colorlib-footer ul li a:focus {
             text-decoration: none;
             outline: none;
-            color: #2c98f0; }
+            color: #999999; }
 
 .container-wrap {
   max-width: 1170px;
@@ -274,7 +274,7 @@ figure {
           #colorlib-hero .flexslider .flex-control-nav li a.flex-active {
             cursor: pointer;
             background: transparent;
-            border: 2px solid #2c98f0; }
+            border: 2px solid #999999; }
     #colorlib-hero .flexslider .flex-direction-nav {
       display: none; }
     #colorlib-hero .flexslider .slider-text {
@@ -311,8 +311,8 @@ figure {
           font-weight: 300;
           font-family: "Quicksand", Arial, sans-serif; }
           #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 a {
-            color: rgba(44, 152, 240, 0.8);
-            border-bottom: 1px solid rgba(44, 152, 240, 0.7); }
+            color: #999999;
+            border-bottom: 1px solid #999999; }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner .heading-section {
           font-size: 50px; }
           @media screen and (max-width: 768px) {
@@ -749,7 +749,7 @@ body.offcanvas {
   background: #2c98f0;
   -webkit-box-shadow: none;
   box-shadow: none;
-  font-size: 12px;
+  font-size: 16px;
   line-height: 1.2;
   color: #000;
   font-weight: 600;
@@ -866,7 +866,7 @@ body.offcanvas {
 .blog-entry {
   width: 100%;
   float: left;
-  background: #fff;
+  background: black;
   margin-bottom: 3em; }
   @media screen and (max-width: 768px) {
     .blog-entry {
@@ -881,6 +881,7 @@ body.offcanvas {
     .blog-entry .blog-img img {
       position: relative;
       max-width: 100%;
+      height: 250px;
       -webkit-transform: scale(1);
       -moz-transform: scale(1);
       -ms-transform: scale(1);
@@ -890,31 +891,31 @@ body.offcanvas {
       -o-transition: 0.3s;
       transition: 0.3s; }
   .blog-entry .desc h3 {
-    font-size: 16px;
+    font-size: 20px;
     margin-bottom: 25px;
     line-height: auto;
     font-weight: 500;
     text-transform: uppercase;
     letter-spacing: 1px;
     font-family: "Quicksand", Arial, sans-serif; }
-    .blog-entry .desc h3 a {
-      color: #000;
+    .blog-entry .desc h3 {
+      color: white;
       text-decoration: none; }
   .blog-entry .desc span {
     display: block;
     margin-bottom: 20px;
     font-size: 12px;
-    color: rgba(0, 0, 0, 0.4) !important;
+    color: white!important;
     text-transform: uppercase;
     letter-spacing: 1px;
     font-weight: 400; }
     .blog-entry .desc span small i {
-      color: #999999; }
+      color:white; }
   .blog-entry .desc .lead {
     font-size: 12px;
     text-transform: uppercase;
     letter-spacing: 2px;
-    color: #000; }
+    color: white; }
   .blog-entry:hover .blog-img img {
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
