--- a/css/style.css
+++ b/css/style.css
@@ -735,6 +735,7 @@ body.offcanvas {
 
 .progress-wrap h3 {
   font-size: 16px;
+  color:white;
   font-family: "Quicksand", Arial, sans-serif;
   margin-bottom: 10px; }
 
